--- a/strategy.html
+++ b/strategy.html
@@ -5,10 +5,36 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>AlignWin - Strategy Call</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Favicon -->
+<!-- Favicon -->
+<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
+<link rel="shortcut icon" href="images/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <style>
     .fade-in { opacity: 0; transform: translateY(20px); animation: fadeInUp 1s forwards; }
     @keyframes fadeInUp { to { opacity: 1; transform: translateY(0); } }
     .logo-img { width: 44px; height: 44px; object-fit: contain; }
+
+    /* Background overlay & blur effect for mobile */
+    .bg-hero {
+      background-image: url('images/background.jpg');
+      background-size: cover;
+      background-position: center;
+      background-repeat: no-repeat;
+      transition: filter 0.3s ease;
+    }
+
+    @media (max-width: 768px) {
+      .bg-hero {
+        filter: blur(4px) brightness(0.6);
+      }
+    }
+
+    @media (min-width: 769px) {
+      .bg-hero {
+        filter: brightness(0.5);
+      }
+    }
   </style>
 </head>
 <body class="bg-gray-100">
@@ -18,30 +44,20 @@
     <a href="index.html" aria-label="Go to home">
       <img src="images/logo.png" class="logo-img" alt="AlignWin Logo">
     </a>
-    <a href="index.html" class="text-white bg-orange-500 hover:bg-orange-600 px-4 py-2 rounded-lg shadow-md font-bold">
+    <a href="index.html" class="text-white bg-orange-500/90 hover:bg-orange-600 px-4 py-2 rounded-lg shadow-md font-bold">
       ← Back to Home
     </a>
   </header>
 
   <!-- Main Section -->
-  <section class="relative w-full h-screen flex items-center justify-center">
+  <section class="relative w-full h-screen flex items-center justify-center overflow-hidden">
     <!-- Background Image -->
-<div class="absolute inset-0">
-  <!-- Hero Background Image -->
-  <div class="absolute inset-0"
-       style="background-image: url('images/background.jpg');
-              background-size: cover;
-              background-position: center;
-              background-repeat: no-repeat;">
-  </div>
-
-  <!-- Overlay -->
-  <div class="absolute inset-0 bg-black opacity-50"></div>
-</div>
-
+    <div class="absolute inset-0 bg-hero"></div>
+    <!-- Overlay -->
+    <div class="absolute inset-0 bg-black/50"></div>
 
     <!-- Form Container -->
-    <div class="relative max-w-md w-full bg-white rounded-2xl p-8 shadow-2xl z-20 text-center space-y-6 fade-in">
+    <div class="relative w-full max-w-md md:max-w-lg lg:max-w-xl bg-white rounded-2xl p-8 shadow-2xl z-20 text-center space-y-6 fade-in">
       <h2 class="text-3xl md:text-4xl font-bold text-orange-500 mb-2">Get started with AlignWin</h2>
       <p class="text-gray-700 text-sm mb-4">Please fill out the form below or call <span class="font-semibold">your number here</span></p>
 
@@ -108,19 +124,15 @@
 
     form.addEventListener('submit', async (e) => {
       e.preventDefault();
-
       const formData = new FormData(form);
-      const data = Object.fromEntries(formData.entries());
 
       try {
         const res = await fetch('https://api.web3forms.com/submit', {
           method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify(data)
+          body: formData
         });
         const result = await res.json();
         if (result.success) {
-          // Redirect to success.html after successful submission
           window.location.href = 'success.html';
         } else {
           alert('Submission failed. Check your access key.');
