--- a/success.html
+++ b/success.html
@@ -5,12 +5,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Thanks — AlignWin</title>
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- Favicon -->
+  <link rel="icon" href="images/favicon.png" type="image/png">
+  <link rel="shortcut icon" href="images/favicon.png" type="image/png">
+  <style>
+    .fade-in { opacity: 0; transform: translateY(20px); animation: fadeInUp 1s forwards; }
+    @keyframes fadeInUp { to { opacity: 1; transform: translateY(0); } }
+    .logo-img { width: 44px; height: 44px; object-fit: contain; }
+  </style>
 </head>
 <body class="bg-gray-50 flex items-center justify-center min-h-screen">
-  <div class="bg-white p-8 rounded-2xl shadow-lg text-center max-w-xl">
-    <h1 class="text-3xl font-bold text-orange-500 mb-4">Thanks — we got it!</h1>
-    <p class="text-gray-700 mb-6">Our team will contact you shortly to schedule your strategy call.</p>
-    <a href="index.html" class="bg-orange-500 text-white px-5 py-2 rounded-lg">Return to Home</a>
+
+  <div class="fade-in bg-white p-8 rounded-2xl shadow-2xl text-center max-w-xl space-y-6">
+    <h1 class="text-3xl md:text-4xl font-bold text-orange-500">Thanks — we got it!</h1>
+    <p class="text-gray-700 text-lg">Our team will contact you shortly to schedule your strategy call.</p>
+    <p class="text-gray-500 text-sm">You will be redirected to the homepage in <span id="countdown">5</span> seconds.</p>
+    <a href="index.html" class="inline-block bg-gradient-to-r from-orange-500 to-red-500 text-white font-bold py-3 px-8 rounded-full shadow-lg hover:scale-105 transform transition duration-300">
+      Return to Home
+    </a>
   </div>
+
+  <script>
+    let countdown = 5;
+    const countdownEl = document.getElementById('countdown');
+
+    const interval = setInterval(() => {
+      countdown--;
+      countdownEl.textContent = countdown;
+      if (countdown <= 0) {
+        clearInterval(interval);
+        window.location.href = 'index.html';
+      }
+    }, 1000);
+  </script>
+
 </body>
 </html>
+
