--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <!-- Favicon -->
   <link rel="icon" href="images/favicon.png" type="image/png">
-  <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="images/favicon.png" type="image/png">
   <style>
     :root { --header-height: 72px; }
     html { scroll-behavior: smooth; }
@@ -551,4 +551,5 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
