--- a/strategy.html
+++ b/strategy.html
@@ -6,13 +6,17 @@
   <title>AlignWin - Strategy Call</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <!-- Favicon -->
-<!-- Favicon -->
-<link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-<link rel="shortcut icon" href="images/favicon.png" type="image/png">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
   <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon">
   <style>
-    .fade-in { opacity: 0; transform: translateY(20px); animation: fadeInUp 1s forwards; }
-    @keyframes fadeInUp { to { opacity: 1; transform: translateY(0); } }
+    .fade-in { 
+      opacity: 0; 
+      transform: translateY(20px); 
+      animation: fadeInUp 1s forwards; 
+    }
+    @keyframes fadeInUp { 
+      to { opacity: 1; transform: translateY(0); } 
+    }
     .logo-img { width: 44px; height: 44px; object-fit: contain; }
 
     /* Background overlay & blur effect for mobile */
@@ -25,15 +29,11 @@
     }
 
     @media (max-width: 768px) {
-      .bg-hero {
-        filter: blur(4px) brightness(0.6);
-      }
+      .bg-hero { filter: blur(4px) brightness(0.6); }
     }
 
     @media (min-width: 769px) {
-      .bg-hero {
-        filter: brightness(0.5);
-      }
+      .bg-hero { filter: brightness(0.5); }
     }
   </style>
 </head>
