--- a/index.html
+++ b/index.html
@@ -229,7 +229,28 @@
 
     </div>
 </section>
+<!-- =================  CTA ================= -->
+<div class="mt-16 md:mt-20 text-center">
+  <h2 class="text-3xl sm:text-4xl md:text-5xl font-extrabold text-black mb-6 leading-tight">
+    Ready to Align and Win?
+  </h2>
 
+  <p class="text-sm sm:text-base md:text-lg text-gray-700 font-medium mb-10 max-w-2xl mx-auto leading-relaxed">
+    Book your strategy call today and discover how we can accelerate your business growth.
+  </p>
+
+  <a
+    href="strategy.html"
+    class="inline-block bg-black text-white font-bold text-base md:text-lg
+           px-8 md:px-10 py-3 md:py-4
+           rounded-full shadow-lg hover:shadow-2xl
+           transform transition-transform duration-300 hover:scale-105"
+  >
+    Get Your Growth Strategy
+  </a>
+</div>
+
+</section>
 <!-- ===================== THE ALIGNWIN DIFFERENCE ===================== -->
 <section id="advantage" class="max-w-7xl mx-auto px-6 py-20 md:py-28">
   <h2 class="text-3xl sm:text-4xl md:text-5xl lg:text-6xl font-extrabold text-black text-center mb-12 md:mb-20 fade-slide-up">
@@ -551,5 +572,6 @@
 <script src="script.js"></script>
 </body>
 </html>
+
 
 
